media/cv-screen.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: square;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* end of reset */

/* faux Wikipedia logo font */
@font-face { font-family: 'Linux Libertine'; font-style: normal; font-weight: 400; src: local('Linux Libertine'),url(//brick.a.ssl.fastly.net/fonts/linuxlibertine/400.woff) format('woff'); } .fa-wikipedia:before { font-family: 'Linux Libertine', 'Times New Roman', Times, serif; font-weight: 400; content: "W"; }

body {
	font: normal normal 400;
	font-size: 80%;
	line-height: 1.5em;
	/* font-family: Verdana, sans-serif; */
	font-family: "Open sans", sans-serif;
	margin-top: 1em;
	margin-left: 1em;
}

p {
	position: relative;
	left: 25%;
	margin-bottom: 0.7em;
	margin-right: 0;
	width: 65%;
}

code {
	font: normal normal;
	font-size: 90%;
	font-family: Menlo, monospace, sans-serif;
	color: #aaa;
}

p code {
	position: absolute;
	left: -10%;
}


ul {
	position: relative;
	left: 25%;
	width: 65%;
	margin-bottom: 1.5em;
	margin-top: 1em;
  column-count: 3;
  -webkit-column-count: 3;
  -moz-column-count: 3;
  column-fill: auto;
  -webkit-column-fill: auto;
  -moz-column-fill: auto;
  column-gap: 1em;
  -webkit-column-gap: 1em;
  -moz-column-gap: 1em;
}


li {
	/* empty */
}

li ul {
	position: relative;
	left: 0;
/*	margin-top: 0.25em; */
}

h1,h2,h3,h4 {
	font-weight: 500;
	font-family: Cousine,Verdana,sans-serif;
	width: 65%;
}

h1 {
	/* color: #F07415; */
	text-align: left;
	font-size: 3em;
	line-height: 1em;
	position: relative;
	margin-top: 2em;
	left: 25%;
	/* padding: .1rem 1rem; */
  /*text-shadow: 1px 1px #fff,
      					1px 2px #ccc; */
}

h1+p {
	/*subtitle*/
	color: 	#37b81a;
	/*font-style: italic;*/
	font-size: 110%;
	line-height: 2em;
	margin-top: 0.5em;
	margin-bottom: 0em !important;
}

h2 {
	font-size: 1.1em;
	/* color: #a00; */
	color: 		#37b81a;
	/*color: #1D49A0; */
	font-style: bold;
	margin-top: 2em;
	position: relative;
	top: 1.4em;
	text-align: right;
	width: 15%;
}

h3 {
	color: #F07415;
	font-size: 1em;
	line-height: 2em;
	position: relative;
	top: 1.7em;
	text-align: right;
	width: 15%;
}

a {
	color: inherit;
	/*text-decoration:none*/
}

a:hover {
	color:#39f
}

#webaddress {
	margin-top: 0em;
	position: relative;
  margin-left: 25%;
	color: #aaa;
	font-family: Menlo,monospace,sans-serif;
	font-size: 80%;
}

#webaddress a {
	text-decoration: none;
}

em {
	/*font-weight: bold; */
	font-style: italic;
}

strong {
	font-weight: bold;
}

#address {
	display: none;
}

.footer {
    -webkit-column-count: 3; /* Chrome, Safari, Opera */
    -moz-column-count: 3; /* Firefox */
    column-count: 3;
		position: relative;
		left: 25%;
		margin-top: 2em;
		margin-bottom: 7em;
		margin-right: 0;
		width: 65%;
}

.multicolumn {
    column-count: 3;
    -webkit-column-count: 3;
    -moz-column-count: 3;
    column-gap: 2em;
    -webkit-column-gap: 2em;
    -moz-column-gap: 2em;
    column-fill: auto;
    -webkit-column-fill: auto;
    -moz-column-fill: auto;
    position: relative;
    left: 25%;
    width: 65%;
    margin-top: 2em;
}

.multicolumn ul {
    column-count: 1;
    -webkit-column-count: 1;
    -moz-column-count: 1;
    break-inside: avoid;
    -webkit-column-break-inside: avoid;
    page-break-inside: avoid;
}

/* 
#technical {

}
*/

/*
@media only screen and (max-width: 480px) {
	make one column somehow...
}*/

